# pato_lucas

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/mart/: _mart__models.yml  dim_actividades_economicas.sql  dim_ce_indicadores.sql  dim_cp_indicadores.sql  dim_entidades.sql  dim_estratos.sql  dim_fondos_federales.sql  dim_municipios.sql  dim_scian.sql  fct_asignaciones_federales.sql  fct_censo_economico.sql  fct_censo_poblacion_entidad.sql  fct_censo_poblacion_municipio.sql  fct_dof_asignaciones_mensuales.sql
dbt/models/staging/: _stg__models.yml  stg_ce__actividades.sql  stg_ce__datos.sql  stg_ce__diccionarios.sql  stg_ce__entidades_municipios.sql  stg_ce__estratos.sql  stg_cp__datos.sql  stg_cp__diccionarios.sql  stg_dof__asignaciones.sql
notebook/: datos_tutorial.duckdb  generar_datos.py  tutorial_dbt.ipynb
notebook/soluciones/: dbt_project.yml  profiles.yml
notebook/soluciones/macros/: normalizar_texto.sql
notebook/soluciones/models/: sources.yml
notebook/soluciones/models/mart/: _mart__models.yml  dim_actividades_economicas.sql  dim_ce_indicadores.sql  dim_entidades.sql  fct_censo_economico.sql  fct_presupuesto_mensual.sql
notebook/soluciones/models/staging/: _stg__models.yml  (+4 more)
notebook/soluciones/seeds/: indicadores_clave.csv
scripts/: find_free_port.py
superset/: Dockerfile  provision_dashboard.py  provision_dof_dashboard.py  registrar_duckdb.py  superset-init.sh  superset_config.py  superset_lib.py
