[project]
name = "pato-lucas"
version = "0.1.1"
description = "dbt + DuckDB medallion OLAP for Mexican government statistics (SIEEJ)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "pre-commit",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.basedpyright]
typeCheckingMode = "basic"
exclude = ["superset/", ".venv/"]
